# Lemonade

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Doxyfile  README.md
.ci/: android.sh  end.sh  export.sh  ios.sh  linux.sh  macos-universal.sh  macos.sh  pack.sh  source.sh  windows-mingw.sh  windows.sh
.ci/common/: travis-ci.env
.github/ISSUE_TEMPLATE/: bug-report-feature-request.md  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: android.yml  build.yml  pr.yml  publish.yml  windows.yml
CMakeModules/: BundleTarget.cmake
assets/: icon.psd
src/: CMakeLists.txt
src/android/: local.properties
src/android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
src/android/cnsdk-android-0.7.28/: LICENSE-3RD-PARTY.txt
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/: CMakeLists.txt  LWE_Camera.cpp  LWE_Camera.h  LWE_Core.cpp  LWE_Core.h  LWE_Types.cpp  LWE_Types.h  README.md
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/assets/shaders/: billboardShader.fs  billboardShader.vs  modelShader.fs  modelShader.hlsl  modelShader.vs  text.fs  text.vs  uiShader.fs  uiShader.vs  vulkan_modelShader.fs  vulkan_modelShader.vs
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/: CMakeLists.txt
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/android/: build.gradle
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/android/src/main/: AndroidManifest.xml
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/android/src/main/cpp/: CMakeLists.txt  android_native_app_glue.c  android_native_app_glue.h  main.cpp
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/android/src/main/res/values/: strings.xml
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/androidJava/: build.gradle
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/androidJava/src/main/: AndroidManifest.xml
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/androidJava/src/main/cpp/: CMakeLists.txt  main.cpp
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/androidJava/src/main/java/com/leia/lwe/java/sample/: LWE_Core.java  MainActivity.kt
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/androidJava/src/main/res/layout/: activity_main.xml
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/androidJava/src/main/res/values/: strings.xml  themes.xml
src/android/cnsdk-android-0.7.28/samples/leia/lwEngine/tests/win/: test_lwe_opengl.cpp
src/audio_core/: CMakeLists.txt  cubeb_input.cpp  cubeb_sink.cpp  oboe_sink.cpp  openal_sink.cpp  time_stretch.cpp
src/citra/: CMakeLists.txt  config.cpp
src/citra_qt/: CMakeLists.txt  game_list.cpp  game_list_p.h  game_list_worker.cpp  main.cpp  main.h  main.ui
src/citra_qt/configuration/: config.cpp  configure.ui  configure_dialog.cpp
src/common/: CMakeLists.txt  arch.h  assert.h  common_funcs.h  common_paths.h  file_util.cpp  file_util.h  math_util.h  microprofile.h  microprofileui.h  settings.cpp  settings.h  telemetry.cpp  telemetry.h
src/common/aarch64/: cpu_detect.cpp  cpu_detect.h  oaknut_abi.h  oaknut_util.h
src/common/logging/: backend.cpp  text_formatter.cpp  types.h
src/common/x64/: cpu_detect.cpp  cpu_detect.h  xbyak_abi.h  xbyak_util.h
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.cpp  core_timing.h  custom_tex_cache.cpp  memory.cpp  memory.h  movie.cpp  movie.h  settings.cpp  settings.h  telemetry_session.cpp  telemetry_session.h
src/core/arm/: exclusive_monitor.cpp
src/core/cheats/: cheats.cpp  gateway_cheat.cpp
src/core/dumping/: ffmpeg_backend.cpp
src/core/file_sys/: ncch_container.cpp  plugin_3gx.cpp  plugin_3gx.h
src/core/frontend/: emu_window.h  framebuffer_layout.cpp
src/core/gdbstub/: hio.cpp
src/core/hw/: gpu.cpp  lcd.cpp
src/core/loader/: ncch.cpp
src/dedicated_room/: CMakeLists.txt  lemonade-room.cpp  lemonade-room.rc
src/input_common/: CMakeLists.txt
src/input_common/udp/: protocol.h
src/lemonade/: CMakeLists.txt  config.cpp  default_ini.h  lemonade.cpp
src/lemonade/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
src/lemonade_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  bootmanager.cpp  compatdb.cpp  compatdb.ui  compatibility_list.cpp  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  lemonade-qt.rc  loading_screen.cpp  main.cpp  main.h  main.ui  qt_image_interface.cpp  uisettings.cpp  uisettings.h
src/lemonade_qt/applets/: mii_selector.cpp  swkbd.cpp
src/lemonade_qt/camera/: camera_util.cpp  qt_camera_base.cpp  qt_camera_base.h  qt_multimedia_camera.cpp  qt_multimedia_camera.h  still_image_camera.cpp  still_image_camera.h
src/lemonade_qt/configuration/: config.cpp  config.h  configuration_shared.cpp  configure.ui  configure_audio.cpp  configure_camera.cpp  configure_debug.cpp  configure_dialog.cpp  configure_enhancements.cpp  configure_general.cpp  configure_graphics.cpp  configure_hotkeys.cpp  configure_input.cpp  configure_motion_touch.cpp  configure_per_game.cpp  configure_per_game.h  configure_storage.cpp  configure_system.cpp  configure_touch_from_button.cpp  configure_touch_from_button.ui  configure_ui.cpp  configure_web.cpp  configure_web.ui
src/lemonade_qt/debugger/: console.cpp  lle_service_modules.cpp  profiler.cpp  registers.cpp  wait_tree.cpp
src/lemonade_qt/dumping/: dumping_dialog.cpp  option_set_dialog.cpp  options_dialog.cpp
src/lemonade_qt/movie/: movie_play_dialog.cpp  (+1 more)
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp  network_settings.h  room.cpp  room.h  verify_user.h
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  command_processor.cpp  gpu.cpp  gpu_thread.cpp  pica.cpp  regs.cpp  regs_framebuffer.h  renderer_base.cpp  vertex_loader.cpp  video_core.cpp
src/web_service/: CMakeLists.txt  announce_room_json.h  telemetry_json.h  verify_login.h  verify_user_jwt.cpp
(+415 files in other folders)
